--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.http.multipart.max-request-size=128KB
 # ===============================
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 465
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=ankit8826648806@gmail.com
+spring.mail.password=adatadat
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
@@ -22,7 +22,7 @@ logging.level.org.hibernate=ERROR
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/test_case
+spring.datasource.url=jdbc:mysql://localhost:3306/iquery
 spring.datasource.username=root
 spring.datasource.password=tiger
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
