--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8888
-spring.http.multipart.max-file-size=128KB
-spring.http.multipart.max-request-size=128KB
+spring.http.multipart.max-file-size=2048KB
+spring.http.multipart.max-request-size=2048KB
 
 # ===============================
 # SMTP EMAIL
 # ===============================
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 465
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=ankit8826648806@gmail.com
+spring.mail.password=adatadat
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
@@ -31,7 +31,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
+
 
 # ===============================
 # = Thymeleaf configurations
