--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.http.multipart.max-request-size=2048KB
 # ===============================
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 465
-spring.mail.username=ankit8826648806@gmail.com
-spring.mail.password=adatadat
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
